--- a/main.html
+++ b/main.html
@@ -4,7 +4,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Submit Button with Hover Effect</title>
+  <style>
+    #btn {
+      background-color: black;
+      color: white;
+      border-radius: 5px;
+      border: none;
+      padding: 10px 20px;
+      cursor: pointer;
+    }
 
+    #btn:hover {
+      background-color: gray;
+    }
+  </style>
 </head>
 <body>
   <div class="container">
